substrate/frame/support/test/tests/pallet_ui/storage_multiple_getters.stderr
error: Invalid attribute: Duplicate attribute
  --> tests/pallet_ui/storage_multiple_getters.rs:37:3
   |
37 |     #[pallet::getter(fn foo_error)]
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
